# ReconForge

./: LICENSE  README.md
ReconForge/: CONTRIBUTING.md  Dockerfile  LICENSE  REPO_META.txt  SECURITY.md  docker-compose.yml  pyproject.toml
ReconForge/docs/: architecture.md
ReconForge/docs/adr/: ADR-001-passive-scope.md  ADR-002-reporting-format.md
ReconForge/examples/: targets.txt
ReconForge/reconforge/: __main__.py
ReconForge/reconforge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ReconForge/reconforge/cli/: main.py
ReconForge/reconforge/core/: discovery.py  reporting.py  scanner.py
ReconForge/reconforge/utils/: http.py
ReconForge/tests/: test_cli.py  test_reporting.py
