[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reconforge"
version = "0.1.0"
description = "AI-assisted reconnaissance and security posture reporting for modern web applications."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "Rashida Alexander"}
]
dependencies = [
  "requests>=2.31.0",
  "beautifulsoup4>=4.12.3",
  "rich>=13.7.1"
]
keywords = ["security", "reconnaissance", "reporting", "python", "web-security"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.1.1"
]

[project.scripts]
reconforge = "reconforge.cli.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["reconforge*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
